<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_green"
    tools:context=".LoginActivity">

    <!-- Logo ImageView -->
    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="200dp"
        android:contentDescription="@string/logo_desc"
        android:src="@drawable/logo_small"
        android:background="@drawable/border_style"
        app:layout_constraintBottom_toTopOf="@id/emailEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Username EditText -->
    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:autofillHints="Your email"
        android:hint="@string/username_hint"
        android:inputType="textEmailAddress"
        style="@style/CustomTextBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoImageView"
        app:layout_constraintWidth_percent="0.8" />

    <!-- Password EditText -->
    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="300dp"
        android:layout_marginTop="16dp"
        android:layout_height="wrap_content"
        android:autofillHints="account password"
        style="@style/CustomTextBox"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailEditText"
        app:layout_constraintWidth_percent="0.8" />


    <!-- Login Button -->
    <Button
        android:id="@+id/loginButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:text="@string/login"
        style="@style/CustomButton" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordEditText"
        app:layout_constraintWidth_percent="0.8" />

    <!-- Create Account Button -->
    <Button

        android:id="@+id/createAccountButton"
        android:layout_width="193dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:text="@string/create_account"
        style="@style/CustomButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginButton"
        app:layout_constraintWidth_percent="0.8" />

    <!-- Forgot Password Text -->
    <TextView
        android:id="@+id/forgotPasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:padding="8dp"
        android:layout_gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/createAccountButton" />


</androidx.constraintlayout.widget.ConstraintLayout>