<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- Email EditText -->
    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/CustomTextBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/resetPasswordButton"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0.5" />


    <!-- Reset Password Button -->
    <Button
        android:id="@+id/resetPasswordButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:layout_marginTop="15dp"
        style="@style/CustomButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailEditText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <!-- Back to Login Button -->
    <Button
        android:id="@+id/backToLoginButton"
        style="@style/CustomButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/back_to_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resetPasswordButton"
        app:layout_constraintVertical_bias="0.102" />


</androidx.constraintlayout.widget.ConstraintLayout>
